# num-chrunchr

./: .gitignore  Cargo.toml  README.md
.cache/num-chrunchr/dea2903881cb50d4/122113a365f6e881/: b8abaf3aa0014bdf.json
config/: default.toml
docs/: compress-seq.md  info.md  power-of-2-bases.md
docs/roadmaps/: compress-seq-roadmap.md  power-of-2-optimizations.md
res/: big-num.txt
scripts/: bench_power_of_two.fish  bench_power_of_two.sh
src/: config.rs  main.rs  source.rs
src/gpu/: batch_mod.rs  mod.rs
src/repr/: bigint_ram.rs  limb_file.rs  mod.rs
src/strategy/: mod.rs  report.rs
