[package]
name = "num-chrunchr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tempfile = "3.24.0"
serde_json = "1.0.149"
bytemuck = { version = "1.25.0", features = ["derive"] }
pollster = "0.4.0"
wgpu = "28.0.0"
num-bigint = "0.4.6"
num-integer = "0.1.46"
num-traits = "0.2.19"
rand = "0.10.0-rc.8"
rand_core = "0.10.0-rc-6"
